# belajar-rust-axum-sqlx-restapi

./: .env.example  Cargo.toml  readme.md
src/: db.rs  handler.rs  main.rs  model.rs  route.rs
